Bug 411517 - musl system: crash on opening properties window of a folder
Summary: musl system: crash on opening properties window of a folder
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-02 10:20 UTC by Bart Ribbers
Modified: 2019-09-02 14:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
gdb backtrace (8.46 KB, text/plain)
2019-09-02 10:20 UTC, Bart Ribbers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Ribbers 2019-09-02 10:20:16 UTC
Created attachment 122451 [details]
gdb backtrace

SUMMARY
Dolphin segfaults when trying to open the properties window of a folder. Doing the same for a file works fine.

STEPS TO REPRODUCE
1. Get a Musl system like Alpine Linux or Gentoo Musl
2. Install Dolphin
3. Try to open the properties window of a folder

OBSERVED RESULT

Dolphin segfaults

EXPECTED RESULT

Dolphin not to segfault

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Linux 4.19.68
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.61.0
Qt Version: 5.12.4

ADDITIONAL INFORMATION

It's a Musl based system, so the bug is most probably because of that.
Comment 1 Kai Uwe Broulik 2019-09-02 10:37:17 UTC
Thread 1 "dolphin" received signal SIGSEGV, Segmentation fault.
0x00007ffff78d9ce0 in KMountPoint::mountType() const () from /usr/lib/libKF5KIOCore.so.5
(gdb) bt
#0  0x00007ffff78d9ce0 in KMountPoint::mountType() const () from /usr/lib/libKF5KIOCore.so.5
#1  0x00007ffff7a4d12c in ?? () from /usr/lib/libKF5KIOWidgets.so.5
#2  0x00007ffff7a55ef3 in ?? () from /usr/lib/libKF5KIOWidgets.so.5
#3  0x00007ffff7a5666f in ?? () from /usr/lib/libKF5KIOWidgets.so.5
#4  0x00007ffff7a56bd8 in KPropertiesDialog::KPropertiesDialog(KFileItemList const&, QWidget*) () from /usr/lib/libKF5KIOWidgets.so.5
#5  0x00007ffff7e1a319 in DolphinViewActionHandler::slotProperties() () from /usr/lib/libdolphinprivate.so.5
#6  0x00007ffff6085c73 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#7  0x00007ffff6b0935a in QAction::triggered(bool) () from /usr/lib/libQt5Widgets.so.5
#8  0x00007ffff6b0af2e in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQt5Widgets.so.5
Comment 2 Kai Uwe Broulik 2019-09-02 10:42:14 UTC
Missing nullptr check: https://phabricator.kde.org/D23670
Comment 3 Bart Ribbers 2019-09-02 14:35:18 UTC
Awesome, thanks for the quick patch! I tested it and it fixed the problem! I'm going to apply it downstream in Alpine Linux for now.
Comment 4 Kai Uwe Broulik 2019-09-02 14:36:01 UTC
Git commit 3b571aacf7e9fbf94bfc395cf8391f24fae316bb by Kai Uwe Broulik.
Committed on 02/09/2019 at 14:35.
Pushed by broulik into branch 'master'.

[KPropertiesDialog] Always check mount point being null

File system type got added after the fact and outside the guard.

Differential Revision: https://phabricator.kde.org/D23670

M  +7    -7    src/widgets/kpropertiesdialog.cpp

https://commits.kde.org/kio/3b571aacf7e9fbf94bfc395cf8391f24fae316bb