[KPropertiesDialog] Always check mount point being null

File system type got added after the fact and outside the guard.

BUG: 411517

Differential Revision: https://phabricator.kde.org/D23670